# weather_app

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  setup.ps1  setup.sh
backend/: alembic.ini  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: dependencies.py  main.py
backend/app/aggregator/: __init__.py  engine.py  normalizer.py
backend/app/api/: router.py
backend/app/api/v1/: admin.py  cities.py  users.py  (+3 more)
backend/app/core/: config.py  database.py  scheduler.py  security.py
backend/app/fetchers/: __init__.py  base.py  factory.py  openweathermap.py  registry.py  weatherapi.py  yandex_weather.py
backend/app/middleware/: logging.py
backend/app/models/: __init__.py  city.py  request_log.py  source.py  usage_stats.py  user.py  weather.py
backend/app/schemas/: __init__.py  admin.py  city.py  recommendation.py  source.py  user.py  weather.py
backend/app/services/: city_service.py  recommendation_service.py  source_manager.py  stats_service.py  user_service.py  weather_service.py
backend/config/: settings.yaml
backend/config/sources/: openweathermap.yaml  weatherapi.yaml  yandex_weather.yaml
backend/tests/: test_admin_api.py  test_aggregation_engine.py  test_cities_api.py  test_openweathermap_fetcher.py  test_sources_api.py  test_users_api.py  test_weather_api.py  test_weather_service.py  test_weatherapi_fetcher.py  test_yandex_weather_fetcher.py
bot/: pyproject.toml  requirements-dev.txt  requirements.txt
bot/app/: bot.py  config.py  main.py
bot/app/handlers/: city.py  forecast.py  help.py  source.py  start.py  weather.py
bot/app/keyboards/: inline.py
bot/app/middlewares/: user_tracking.py
bot/app/services/: api_client.py  formatters.py
bot/config/: bot_settings.yaml
bot/tests/: test_api_client.py  test_config.py  test_formatters.py  test_keyboards.py
ml/: Dockerfile  generate_dataset.py  pyproject.toml  requirements-dev.txt  requirements.txt  train.py
ml/model/: features.py  labels.py  pipeline.py
(+70 files in other folders)
