[project]
name = "weather-aggregator-ml"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn>=1.6",
    "pandas>=2.2",
    "numpy>=2.2",
    "joblib>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "jupyter>=1.1",
    "ipykernel>=6.29",
]

[tool.setuptools]
packages = []
